Fixed misaligned margin on footer. Added animations on other sections and buttons.

--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -64,6 +64,12 @@
   line-height: 23px;
 
   cursor: pointer;
+
+  transition: 0.3s;
+}
+
+.about-us__button:hover {
+  scale: 1.05;
 }
 
 .about-us__button img {
