--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -77,6 +77,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  transition: 0.3s;
+}
+
+.trending__discover:hover {
+  scale: 1.05;
 }
 
 .trending__list {
